--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoadingDialogActivity" />
+        <activity android:name=".Tap4Activity" />
     </application>
 
 </manifest>
