--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/photo_navi_icon"
@@ -54,6 +55,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:mimeType="image/*" />
+                <data android:mimeType="video/*"/>
             </intent-filter>
         </activity>
         <activity android:name=".LoadingDialogActivity" />
