--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.sungju1.photonavi"
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -36,12 +36,18 @@ android {
         testCompile 'junit:junit:4.12'
         compile 'com.android.support:design:25.3.1'
         apply plugin: 'build-announcements'
-        compile 'com.google.android.gms:play-services-ads:11.2.0'
+        compile 'com.google.android.gms:play-services-ads:11.8.0'
+
+        implementation "com.google.firebase:firebase-auth:11.8.0"
+        implementation "com.google.android.gms:play-services-auth:11.8.0"
+        // FirebaseUI for Firebase Auth
+        implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
         provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     }
 }
 dependencies {
-    compile 'com.google.android.gms:play-services-ads:11.2.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     implementation files('src/main/libs/libDaumMapAndroid.jar')
 }
