--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
-    
     <application
         android:allowBackup="true"
         android:icon="@drawable/photo_navi_icon"
@@ -39,7 +38,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".BackPressCloseHandler"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".IntroActivity"
             android:label="@string/app_name"
@@ -55,13 +54,20 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:mimeType="image/*" />
-                <data android:mimeType="video/*"/>
+                <data android:mimeType="video/*" />
             </intent-filter>
         </activity>
         <activity android:name=".LoadingDialogActivity" />
         <activity android:name=".Tap4Activity" />
         <activity android:name=".Tap1Activity" />
-        <meta-data android:name="com.kakao.sdk.AppKey" android:value="c2e34af344c0392d04ae16d372147919"/>
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="c2e34af344c0392d04ae16d372147919" />
+
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".ForgotActivity"></activity>
     </application>
 
 </manifest>
